--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@vitejs/plugin-vue": "^6.0.1",
     "@vitest/coverage-v8": "3.2.4",
     "@vue/test-utils": "^2.4.6",
+    "bs-dark-theme": "^1.2.0",
     "jsdom": "^27.0.0",
     "sass": "^1.93.2",
     "vite": "^7.1.7",
